force-app/main/default/objects/Customer_360_Staging__c/Customer_360_Staging__c.object-meta.xml
<CustomObject>
    <label>Customer 360 Staging</label>
    <nameField>
        <displayFormat>C360S-{0000}</displayFormat>
        <label>Customer 360 Staging</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer 360 Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>