force-app/main/default/objects/Customer_360_Staging__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer 360 Staging</relationshipLabel>
    <relationshipName>Customer_360_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>