force-app/main/default/objects/Customer_360_Staging__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the C360 record Staging record&apos;s data looks good, Checking this checkbox will initiate data transfer to C360 record and removes its duplicates. Also flags the account&apos;s C360 process record</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>