force-app/main/default/objects/Customer_360_Staging__c/fields/CM_Tier__c.field-meta.xml
<CustomField>
    <fullName>CM_Tier__c</fullName>
    <description>GTMS-13768 - Validate SKU compatibility to prevent the invalid combo - Renewals</description>
    <label>CM Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tier_Values</valueSetName>
    </valueSet>
</CustomField>