force-app/main/default/objects/Customer_360_Staging__c/fields/Contract_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Contract_Vehicle__c</fullName>
    <inlineHelpText>PublicSector Contract Vehicle</inlineHelpText>
    <label>Contract Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>Sourcewell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>