force-app/main/default/objects/Customer_360_Staging__c/fields/LIC_AT_TAG__c.field-meta.xml
<CustomField>
    <fullName>LIC_AT_TAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-21331 To identify the who purchased the Asset Tag License, Populates from OpptyLineItemDiscBatch</description>
    <label>LIC AT TAG</label>
    <type>Checkbox</type>
</CustomField>