force-app/main/default/objects/Customer_360_Staging__c/fields/LIC_CM2_PRO__c.field-meta.xml
<CustomField>
    <fullName>LIC_CM2_PRO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIC CM2 PRO</label>
    <type>Checkbox</type>
</CustomField>