force-app/main/default/objects/Customer_360_Staging__c/fields/LIC_CRGO_Discount__c.field-meta.xml
<CustomField>
    <fullName>LIC_CRGO_Discount__c</fullName>
    <label>LIC-CRGO Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>