force-app/main/default/objects/Customer_360_Staging__c/fields/LIC_TRLR_PREM_KIT_MUP__c.field-meta.xml
<CustomField>
    <fullName>LIC_TRLR_PREM_KIT_MUP__c</fullName>
    <description>GTMS-21109  : Populate from Opportunity Line Item using OpptyLineItemDiscountBatch.</description>
    <label>LIC-TRLR-PREM-KIT-MUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>