force-app/main/default/objects/Customer_360_Staging__c/fields/LIC_VG_COMPLIANCE_MUP__c.field-meta.xml
<CustomField>
    <fullName>LIC_VG_COMPLIANCE_MUP__c</fullName>
    <label>LIC-VG-COMPLIANCE MUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>