force-app/main/default/objects/Customer_360_Staging__c/fields/LIC_VG_PRO__c.field-meta.xml
<CustomField>
    <fullName>LIC_VG_PRO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIC VG PRO</label>
    <type>Checkbox</type>
</CustomField>