force-app/main/default/objects/Customer_360_Staging__c/fields/LIC_VG_PS_MUP__c.field-meta.xml
<CustomField>
    <fullName>LIC_VG_PS_MUP__c</fullName>
    <description>License for Vehicle Gateways - Public Sector Only, No WiFi, No ELD</description>
    <label>LIC-VG-PS-MUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>