force-app/main/default/objects/Customer_360_Staging__c/fields/Products_Purchased_Report__c.field-meta.xml
<CustomField>
    <fullName>Products_Purchased_Report__c</fullName>
    <formula>HYPERLINK(&quot;https://samsara.lightning.force.com/lightning/r/Report/00O4p000004HWqvEAG/view?&amp;fv0=&quot;+ Account__r.Id, &quot;Products Purchased Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Purchased Report</label>
    <type>Text</type>
</CustomField>