force-app/main/default/objects/Customer_360_Staging__c/fields/VG_Basic_Purchased__c.field-meta.xml
<CustomField>
    <fullName>VG_Basic_Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VG Basic Purchased</label>
    <type>Checkbox</type>
</CustomField>