force-app/main/default/objects/Customer_360_Staging__c/fields/VG_Platform_Tier__c.field-meta.xml
<CustomField>
    <fullName>VG_Platform_Tier__c</fullName>
    <label>VG Platform Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Tier_Values</valueSetName>
    </valueSet>
</CustomField>